--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^5.0.0"
+    "express": "^5.0.0",
+    "socket.io": "^4.7.4",
+    "pg": "^8.11.3",
+    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.1"
   }
 }
