--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-hello-world",
+  "name": "talkie-server",
   "version": "1.0.0",
-  "description": "Express Hello World on Render",
+  "description": "Real-time chat backend for Talkie app",
   "main": "app.js",
   "repository": "https://github.com/render-examples/express-hello-world",
   "author": "Render Developers",
@@ -11,11 +11,14 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^5.0.0",
+    "express": "^4.18.2",
     "socket.io": "^4.7.4",
     "pg": "^8.11.3",
     "cors": "^2.8.5",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
